--- a/style.css
+++ b/style.css
@@ -107,8 +107,12 @@ img {
 }
 
 /* FEATURES */
-/* .features-icon {
-} */
+.features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
+}
 
 .features-title {
   margin-bottom: 16px;
@@ -170,8 +174,11 @@ h3 {
   margin-bottom: 0;
 }
 
-/* .chair-icon {
-} */
+.chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
+}
 
 .chair-price {
   display: flex;
